--- a/src/components/AdminBar/index.scss
+++ b/src/components/AdminBar/index.scss
@@ -1,7 +1,7 @@
 @import '~@payloadcms/ui/scss';
 
-.admin-bar {
-  @include small-break {
-    display: none;
-  }
-}
+//.admin-bar {
+//  @include small-break {
+//    display: none;
+//  }
+//}
