--- a/src/app/(frontend)/styles.css
+++ b/src/app/(frontend)/styles.css
@@ -60,3 +60,8 @@ body:has(.admin-bar:not(.hidden)) {
     top: 36px;
   }
 }
+
+:where(.sidebar-section:has(.border-emerald-500)) {
+  visibility: visible;
+  display: block;
+}
