--- a/src/app/(frontend)/tailwind.css
+++ b/src/app/(frontend)/tailwind.css
@@ -32,6 +32,9 @@
   --text-9xl: 8rem;
   --text-9xl--line-height: 1;
 
+  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-geist-sans);
+
   --shadow-glow: 0 0 4px rgb(0 0 0 / 0.1);
 
   --container-lg: 33rem;
