Add event background and resize handling for time entries in PlanningComponent

--- a/src/blocks/PlanningBlock/index.scss
+++ b/src/blocks/PlanningBlock/index.scss
@@ -151,3 +151,7 @@
   --theme-elevation-100: var(--color-zinc-100);
   --theme-elevation-300: var(--color-zinc-200);
 }
+
+body:has(.fc) {
+  overflow: visible!important;
+}
