Add tooltip for event comments and modify project count display.

--- a/src/blocks/PlanningBlock/index.scss
+++ b/src/blocks/PlanningBlock/index.scss
@@ -164,6 +164,12 @@
   --theme-elevation-300: var(--color-zinc-200);
 }
 
+.modal-container {
+  textarea {
+    font-size: 14px;
+  }
+}
+
 body:has(.fc) {
   overflow: visible!important;
 }
