feat(projects): add comment, type fields and color picker component; update dependencies

--- a/src/blocks/PlanningBlock/index.scss
+++ b/src/blocks/PlanningBlock/index.scss
@@ -169,6 +169,11 @@
     &.non-teamwork-project {
       background-color: var(--color-zinc-100);
     }
+
+    &:has(.vacation),
+    &.vacation {
+      background-color: var(--color-zinc-100);
+    }
   }
 
   .overload-success {
