--- a/src/blocks/PlanningBlock/index.scss
+++ b/src/blocks/PlanningBlock/index.scss
@@ -174,6 +174,12 @@
     &.vacation {
       background-color: var(--color-zinc-100);
     }
+
+    &:has(.archived),
+    &.archived {
+      background-color: var(--color-zinc-100);
+      opacity: 0.4;
+    }
   }
 
   .overload-success {
